--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,9 @@ services:
       - MYSQL_DATABASE=${MYSQL_DATABASE}
       - MYSQL_USER=${MYSQL_USER}
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+    networks:
+      - symfony_net
+
   symfony:
     image: bitnami/symfony:6.3
     ports:
@@ -24,5 +27,10 @@ services:
       - SYMFONY_PROJECT_SKELETON=symfony/skeleton
     volumes:
       - './my-project:/app'
+    networks:
+      - symfony_net
     depends_on:
       - mariadb
+
+networks:
+  symfony_net:
